Fix wrong font for buttons

--- a/webapps/interactive-decision-tree-builder/style.css
+++ b/webapps/interactive-decision-tree-builder/style.css
@@ -161,6 +161,7 @@ select {
     background-color : var(--white);
     color: var(--grey-lighten-2);
     border: none;
+    font-family: var(--font-family);
 }
 
 .button-with-borders {
